--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -1,3 +1,9 @@
 
 # Blocks
 tile.meta_block_example.block_example.name=Block Example
+
+# Recipemaps
+recipemap.water_tank.name=Water Tank
+
+# Multiblock machine controllers
+gtb.machine.water_tank.name=Water Tank
