added classes for metaitems addition and the astro miner as an example

--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -7,3 +7,6 @@ recipemap.water_tank.name=Water Tank
 
 # Multiblock machine controllers
 gtb.machine.water_tank.name=Water Tank
+
+# MetaItems
+metaitem.astro_miner.name=Astro Miner
