--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -131,3 +131,52 @@ gregtech.material.tripropylamine=Tripropylamine
 gregtech.material.sodium_formate=Sodium Formate
 gregtech.material.formic_acid=Formic Acid
 gregtech.material.formaldehyde=Formaldehyde
+gregtech.material.dicyclopentadiene=Dicyclopentadiene
+gregtech.material.cyclopentadiene=Cyclopentadiene
+gregtech.material.nylon=Nylon
+gregtech.material.electron_degenerate_rhenium_plasma=Electron Degenerate Rhenium Plasma
+gregtech.material.novolacs_photoresist=Novolacs Photoresist
+gregtech.material.white_phosphorus=White Phosphorus
+gregtech.material.silicon_carbide=Silicon Carbide
+gregtech.material.silicon_carbide_vapor=Silicon Carbide Vapor
+gregtech.material.very_hot_nitrogen=Very Hot Nitrogen
+gregtech.material.photopolymer_solution=Photopolymer Solution
+gregtech.material.used_photopolymer_solution=Used Photopolymer Solution
+gregtech.material.very_hot_xenon=Very Hot Xenon
+gregtech.material.very_hot_argon=Very Hot Argon
+gregtech.material.nickel_nitride=Nickel Nitride
+gregtech.material.metastable_oganesson=Metastable Oganesson
+gregtech.material.very_hot_krypton=Very Hot Krypton
+gregtech.material.super_fluid_helium_4=Superfluid Helium 4
+gregtech.material.helium_4=Helium-4
+gregtech.material.liquid_enriched_helium_4=Liquid Enriched Helium-4
+gregtech.material.trichloroflerane=Trichloroflerane
+gregtech.material.naquadah_rich_sterile_growth_medium=Naquadah Rich Sterile Growth Medium
+gregtech.material.high_density_polyethylene=High Density Polyethylene
+gregtech.material.liquid_nitrogen=Liquid Nitrogen
+gregtech.material.graphene_oxide=Graphene Oxide
+gregtech.material.graphite_oxide=Graphite Oxide
+gregtech.material.silane=Silane
+gregtech.material.very_hot_aqua_regia=Very Hot Aqua Regia
+gregtech.material.chloronaquadic_acid=Chloronaquadic Acid
+gregtech.material.hydrogen_chloride=Hydrogen Chloride
+gregtech.material.liquid_crystal_detector=Liquid Crystal Detector
+gregtech.material.fullerene_polymer_matrix=Fullerene Polymer Matrix
+gregtech.material.fullerene_polymer_tetrix=Fullerene Polymer Tetrix
+gregtech.material.seaborgium_doped_nanotubes=Seaborgium Doped Nanotubes
+gregtech.material.naquadriatic_taranium=Naquadriatic Taranium
+gregtech.material.extra_distilled_water=Extra Distilled Water
+gregtech.material.trichlorosilane=Trichlorosilane
+gregtech.material.super_fluid_helium=Superfluid Helium
+gregtech.material.uev_superconductor=UEV Superconductor
+gregtech.material.zblan=ZBLAN
+gregtech.material.fraction_c_5=Fraction C5
+gregtech.material.lubricant_mixture=Lubricant Mixture
+gregtech.material.slack_wax=Slack Wax
+gregtech.material.alkylated_natural_gas=Alkylated Natural Gas
+gregtech.material.syngas=Syngas
+gregtech.material.lithiumfluoride=Lithium Fluoride
+gregtech.material.naquadah_dioxide=Naquadah Dioxide
+gregtech.material.barium_titanate=Barium Titanate
+gregtech.material.chromatic_glass=Chromatic Glass
+gregtech.material.silver_bromides=Silver Bromide
