--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -56,6 +56,153 @@ metaitem.moderately_forged_damascus_steel_assembly.name=Moderately Forged Damasc
 metaitem.hot_moderately_forged_damascus_steel_assembly.name=Hot Moderately Forged Damascus Steel Assembly
 metaitem.highly_forged_damascus_steel_assembly.name=Highly Forged Damascus Steel Assembly
 metaitem.hot_highly_forged_damascus_steel_assembly.name=Hot Highly Forged Damascus Steel Assembly
+metaitem.nano_cpu_wafer.name=Nano CPU Wafer
+metaitem.trenched_superconductor_layered_uhasoc_wafer.name=Trenched Superconductor Layered UHASOC Wafers
+metaitem.monocrystalline_seed_crystal.name=Monocrystalline Seed Crystal
+metaitem.polysilicon_wafer.name=Polysilicon Wafer
+metaitem.n_doped_silicon_dioxide_wafer.name=n-doped Silicon Dioxide Wafer
+metaitem.single_josephson_junction_lithography_mask.name=Single Josephson Junction Lithography Mask
+metaitem.doped_power_ic_wafer.name=Doped Power IC Wafer
+metaitem.doped_ram_wafer.name=Doped RAM Wafer
+metaitem.doped_ic_wafer.name=Doped IC Wafer
+metaitem.doped_high_power_ic_wafer.name=Doped High Power IC Wafer
+metaitem.doped_cpu_wafer.name=Doped CPU Wafer
+metaitem.doped_polysilicon_wafer.name=Doped Polysilicon Wafer
+metaitem.engraved_power_ic_wafer.name=Engraved Power IC Wafer
+metaitem.engraved_cpu_wafer.name=Engraved CPU Wafer
+metaitem.engraved_ic_wafer.name=Engraved IC Wafer
+metaitem.engraved_titanate_substrate_wafer.name=Engraved Barium Titanate Substrate Wafer
+metaitem.engraved_ram_wafer.name=Engraved RAM Wafer
+metaitem.controlled_shaped_naquadria_charge.name=Controlled Shaped Naquadria Charge
+metaitem.controlled_shaped_naquadria_charge_casing.name=Controlled Shaped Naquadria Charge Casing
+metaitem.ram_lithography_mask.name=RAM Lithography Mask
+metaitem.cpu_lithography_mask.name=CPU Lithography Mask
+metaitem.lpic_lithography_mask.name=LPIC Lithography Mask
+metaitem.manufactured_superconductor_circuit.name=Manufactured Superconductor
+metaitem.sputtered_sapphire_substrate.name=Sputtered Sapphire Substrate
+metaitem.uhpic_base.name=UHPIC Base
+metaitem.uhpic_base_wafer.name=UHPIC Base Wafer
+metaitem.uhpic_lithography_mask.name=UHPIC Lithography Mask
+metaitem.pic_lithography_mask.name=PIC Lithography Mask
+metaitem.lithography_base_mask.name=Lithography Base Mask
+metaitem.wired_substrate_wafer.name=Wired Substrate Wafer
+metaitem.superconductor_coated_substrate_wafer.name=Superconductor Coated Substrate Wafer
+metaitem.barium_titanate_substrate_wafer.name=Barium Titanate Substrate Wafer
+metaitem.barium_titanate_boule.name=Barium Titanate Boule
+metaitem.barium_titanate_seed_crystal.name=Barium Titanate Seed Crystal
+metaitem.treated_photocoated_hassium_wafer.name=Treated Photocoated Hassium Wafer
+metaitem.unpreparated_cela_boule.name=Unpreparated Ce:/La Boule
+metaitem.cruicible_mold.name=Cruicible Mold
+metaitem.graphite_cruicible.name=Graphite Cruicible
+metaitem.soc_wafer_base.name=SoC Wafer Base
+metaitem.engraved_soc_wafer.name=Engraved SoC Wafer
+metaitem.uhasoc_lithography_mask.name=UHaSoC Lithography Mask
+metaitem.shaped_high_energy_gamma_shield.name=Shaped High Energy Gamma Shield
+metaitem.pre_engraved_uhasoc_wafer.name=Pre-Engraved UHaSoC
+metaitem.superconductor_layered_uhasoc_wafer.name=Superconductor Layered UHaSoC Wafer
+metaitem.degenerate_uhasoc_wafer.name=Degenerate UHaSoC Wafer
+metaitem.celled_uhasoc_wafer.name=Celled UHaSoC Wafer
+metaitem.spin_aligned_uhasoc_wafer.name=Spin Aligned UHaSoC Wafer
+metaitem.uhasoc_post_engraving_mask.name=UHaSoC Post Engraving Mask
+metaitem.relayered_uhasoc_wafer.name=Relayered UHaSoC Wafer
+metaitem.fully_connected_uhasoc_wafer.name=Fully Connected UHaSoC Wafer
+metaitem.supercooled_uhasoc_wafer.name=Supercooled UHaSoC Wafer
+metaitem.monocrystalline_inp_boule.name=Monocrystalline InP Boule
+metaitem.monocrystalline_inp_ingot.name=Monocrystalline InP Ingot
+metaitem.monocrystalline_inp_seed_crystal.name=Monocrystalline InP Seed Crystal
+metaitem.indium_phosphide_wafer.name=Indium Phosphide Wafer
+metaitem.zblan_layered_inp_wafer.name=ZBLAN Layered InP Wafer
+metaitem.resonant_inp_wafer.name=Resonant InP Wafer
+metaitem.insulated_inp_wafer.name=Insulated InP Wafer
+metaitem.re_exposed_inp_wafer.name=Re-Exposed InP Wafer
+metaitem.electroluminescent_inp_wafer.name=Electroluminescent InP Wafer
+metaitem.recoated_inp_wafer.name=Recoated InP Wafer
+metaitem.contact_ready_inp_wafer.name=Contact Ready InP Wafer
+metaitem.uninsulated_optical_soc.name=Uninsulated Optical SoC
+metaitem.contactless_optical_soc.name=Contactless Optical SoC
+metaitem.insulated_optical_soc.name=Insulated Optical SoC
+metaitem.photogenally_enhanced_wafer.name=Photogenally Enhanced Wafer
+metaitem.doped_soc_wafer.name=Doped SoC Wafer
+metaitem.fcelauwafer.name=50% Purified Ce:/La Wafer
+metaitem.celawafer.name=Ce:/La Wafer
+metaitem.cela_silicon_boule.name=Ce:/La Silicon Boule
+metaitem.lanthanum_seed_crystal.name=Lanthanum Seed Crystal
+metaitem.oganesson_seed_crystal.name=Oganesson Seed Crystal
+metaitem.oganesson_boule.name=Oganesson Boule
+metaitem.hasoc_lithography_mask.name=HaSoC Lithography Mask
+metaitem.monocrystalline_oganesson_ingot.name=Monocrystalline Oganesson Ingot
+metaitem.oganesson_wafer.name=Oganesson Wafer
+metaitem.treated_oganesson_wafer.name=Treated Oganesson Wafer
+metaitem.pre_engraving_oganesson_lithography_mask.name=Pre-Engraving Oganesson Lithography Mask
+metaitem.engraved_oganesson_wafer.name=Engraved Oganesson Wafer
+metaitem.raw_oganesson_wafer.name=Raw Oganesson Wafer
+metaitem.doped_oganesson_wafer.name=Doped Oganesson Wafer
+metaitem.engraved_uhasoc_wafer.name=Engraved UHaSoC Wafer
+metaitem.bathed_treated_oganesson_wafer.name=Bathed Treated Oganesson Wafer
+metaitem.unpolarized_hasoc_wafer.name=Unpolarized HaSoC Wafer
+metaitem.hasoc_die.name=HaSoC Die
+metaitem.biosafe_protective_plating.name=Biosafe Protective Plating
+metaitem.clean_hasoc_die.name=Clean HaSoC Die
+metaitem.neural_implanted_hasoc_die.name=Neural Implanted HaSoC Die
+metaitem.grown_hasoc_die.name=Grown HaSoC Die
+metaitem.neurological_life_support_unit.name=Neurological Life Support Unit
+metaitem.sapphire_seed_crystal.name=Sapphire Seed Crystal
+metaitem.sapphire_boule.name=Sapphire Boule
+metaitem.monocrystalline_sapphire_ingot.name=Monocrystalline Sapphire Ingot
+metaitem.sapphire_wafer.name=Sapphire Wafer
+metaitem.qbit_cpu_lithography_mask.name=QBit CPU Lithography Mask
+metaitem.engraved_qbit_cpu_wafer.name=Engraved QBit CPU Wafer
+metaitem.doped_qbit_cpu_wafer.name=Doped QBit CPU Wafer
+metaitem.superconductor_coated_qbit_cpu_wafer.name=Superconductor Coated QBit CPU Wafer
+metaitem.u_twofourty_electron_source.name=U-240 Electron Source
+metaitem.qbit_cpu_die.name=QBit CPU Die
+metaitem.covered_qbit_cpu.name=Covered QBit CPU
+metaitem.celauwafer.name=Ce:/La Unpurified Wafer
+metaitem.silicon_dioxide_wafer.name=Silicon Dioxide Wafer
+metaitem.engraved_nanocpu_wafer.name=Engraved NanoCPU Wafer
+metaitem.doped_nanocpu_wafer.name=Doped NanoCPU Wafer
+metaitem.nanocpu_lithography_mask.name=NanoCPU Lithography Mask
+metaitem.gated_nanocpu_wafer.name=Gated NanoCPU Wafer
+metaitem.insulated_nanocpu_wafer.name=Insulated NanoCPU Wafer
+metaitem.trenched_insulated_nanocpu_wafer.name=Trenched Insulated NanoCPU Wafer
+metaitem.unplanarized_nanocpu_wafer.name=Unplanarized NanoCPU Wafer
+metaitem.nickel_nitride_wafer.name=Nickel Nitride Wafer
+metaitem.engraved_nor_wafer.name=Engraved NOR Wafer
+metaitem.engraved_nand_wafer.name=Engraved NAND Wafer
+metaitem.flerovium_layered_wafer.name=Flerovium Layered Wafer
+metaitem.spinorial_memory_wafer.name=Spinorial Memory Wafer
+metaitem.pre_engraved_nqo2_wafer.name=Pre-Engraved NQ02 Wafer
+metaitem.enriched_naquadah_photolithography_mask.name=Enriched Naquadah Lithography Mask
+metaitem.doped_asoc_wafer.name=Doped ASoC Wafer
+metaitem.engraved_asoc_wafer.name=Engraved ASoC Wafer
+metaitem.engraved_spinorial_memory_wafer.name=Engraved Spinorial Memory Wafer
+metaitem.doped_aram_wafer.name=Doped ARAM Wafer
+metaitem.unbaked_monocrystalline_silicon_boule.name=Unbaked Monocrystalline Silicon Boule
+metaitem.photopolymer_plate.name=Photopolymer Plate
+metaitem.integrated_circuit_lithography_mask.name=Integrated Circuit Lithography Mask
+metaitem.naquadah_dioxide_seed_crystal.name=Naquadah Dioxide Seed Crystal
+metaitem.naquadah_dioxide_boule.name=Naquadah Dioxide Boule
+metaitem.naquadah_dioxide_wafer.name=Naquadah Dioxide Wafer
+metaitem.soc_lithography_mask.name=SoC Lithography Mask
+metaitem.trenched_naquadah_dioxide_wafer.name=Trenched Naquadah Dioxide Wafer
+metaitem.nickel_breeding_bed.name=Nickel Breeding Bed
+metaitem.optical_lithography_mask.name=Optical Lithography Mask
+metaitem.interconnected_inp_wafer.name=Interconnected InP Wafer
+metaitem.photocoated_hassium_wafer.name=Photocoated Hassium Wafer
+metaitem.qbit_cpu_wafer.name=QBit CPU Wafer
+metaitem.nor_photolithography_mask.name=NOR Lithography Mask
+metaitem.nand_photolithography_mask.name=NAND Lithography Mask
+metaitem.aram_wafer.name=ARAM Wafer
+metaitem.uhasoc_wafer.name=UHaSoC Wafer
+metaitem.optical_soc_wafer.name=Optical SoC Wafer
+metaitem.qbit_cpu.name=QBit CPU
+metaitem.optical_soc.name=Optical SoC
+metaitem.bituminous_residues.name=Bituminous Residues
+
+
+
+
+
 
 #Materials
 gregtech.material.tungstentrioxide=Tungsten Trioxide
@@ -176,7 +323,18 @@ gregtech.material.slack_wax=Slack Wax
 gregtech.material.alkylated_natural_gas=Alkylated Natural Gas
 gregtech.material.syngas=Syngas
 gregtech.material.lithiumfluoride=Lithium Fluoride
+gregtech.material.liquid_xenon=Liquid Xenon
 gregtech.material.naquadah_dioxide=Naquadah Dioxide
 gregtech.material.barium_titanate=Barium Titanate
 gregtech.material.chromatic_glass=Chromatic Glass
 gregtech.material.silver_bromides=Silver Bromide
+gregtech.material.electron_degenerate_rhenium=Electron Degenerate Rhenium
+gregtech.material.high_purity_arsenic=High Purity Arsenic
+gregtech.material.indium_chloride=Indium Chloride
+gregtech.material.graphene_oxidation_residues=Graphene Oxidation Residues
+gregtech.material.graphene_oxidation_solution=Graphene Oxidation Solution
+gregtech.material.sodium_nitrate=Sodium Nitrate
+gregtech.material.doped_nanotube_deposition_mix=Doped Nanotube Deposition Mix
+gregtech.material.nanotube_deposition_mix=Nanotube Deposition Mix
+gregtech.material.doped_nanotube_deposition_mixture=Doped Nanotube Deposition Mixture
+gregtech.material.carbon_nanotubes=Carbon Nanotubes
