--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -8,6 +8,8 @@ tile.gtb_multiblock_casing.climate_proof_casing.name=Climate Proof
 tile.gtb_multiblock_casing.steel_bordered_wooden_casing.name=Steel Bordered Wooden Casing
 tile.gtb_multiblock_casing.quantum_casing.name=Quantum Casing
 tile.gtb_multiblock_casing.quantum_glass.name=Quantum Glass
+tile.gtb_explosive.naquadria_charge.name=Naquadria Charge
+
 
 # Recipemaps
 recipemap.water_tank.name=Water Collection
@@ -19,15 +21,70 @@ recipemap.fermentation_vat.name=Fermentation
 recipemap.dilution_tank.name=Dilution
 recipemap.coker.name=Coking
 recipemap.catalytic_reformation_unit.name=Catalytic Reforming
-recipemap.black_hole_compressor.name=Black Hole Compressing
+recipemap.black_hole_compressor.name=Black Hole Compression
 recipemap.bedrock_pump.name=Bedrock Pumping
 recipemap.bacterial_vat.name=Bacterial Vat
 recipemap.astro_mining_station.name=Astro Mining
 recipemap.fischer_tropsch_reactor.name=Fischer Tropsch Reaction
 recipemap.dehydrator.name=Dehydration
-recipemap.crystallizer.name=Chemical Crystallization
+recipemap.crystallizer.name=Crystallization
+recipemap.cvd_unit.name=Continous Vapour Deposition
+recipemap.ion_implanter.name=Ion Implantation
+recipemap.roaster.name=Roasting
+
+
+# Singleblock machinery
+
+
+gtb.machine.crystallizers.lv.name=Basic Crystallizer
+gtb.machine.crystallizers.mv.name=Advanced Crystallizer
+gtb.machine.crystallizers.hv.name=Advanced Crystallizer II
+gtb.machine.crystallizers.ev.name=Advanced Crystallizer III
+gtb.machine.crystallizers.iv.name=Elite Crystallizer
+gtb.machine.crystallizers.luv.name=Elite Crystallizer II
+gtb.machine.crystallizers.zpm.name=Elite Crystallizer III
+gtb.machine.crystallizers.uv.name=Ultimate Crystallizer
+
+gtb.machine.dehydrator.lv.name=Basic Dehydrator
+gtb.machine.dehydrator.mv.name=Advanced Dehydrator
+gtb.machine.dehydrator.hv.name=Advanced Dehydrator II
+gtb.machine.dehydrator.ev.name=Advanced Dehydrator III
+gtb.machine.dehydrator.iv.name=Elite Dehydrator
+gtb.machine.dehydrator.luv.name=Elite Dehydrator II
+gtb.machine.dehydrator.zpm.name=Elite Dehydrator III
+gtb.machine.dehydrator.uv.name=Ultimate Dehydrator
+
+gtb.machine.roaster.lv.name=Basic Roaster
+gtb.machine.roaster.mv.name=Advanced Roaster
+gtb.machine.roaster.hv.name=Advanced Roaster II
+gtb.machine.roaster.ev.name=Advanced Roaster III
+gtb.machine.roaster.iv.name=Elite Roaster
+gtb.machine.roaster.luv.name=Elite Roaster II
+gtb.machine.roaster.zpm.name=Elite Roaster III
+gtb.machine.roaster.uv.name=Ultimate Roaster
+
+gtb.machine.cvd_unit.lv.name=Basic CVD Unit
+gtb.machine.cvd_unit.mv.name=Advanced CVD Unit
+gtb.machine.cvd_unit.hv.name=Advanced CVD Unit II
+gtb.machine.cvd_unit.ev.name=Advanced CVD Unit III
+gtb.machine.cvd_unit.iv.name=Elite CVD Unit
+gtb.machine.cvd_unit.luv.name=Elite CVD Unit II
+gtb.machine.cvd_unit.zpm.name=Elite CVD Unit III
+gtb.machine.cvd_unit.uv.name=Ultimate CVD Unit
+
+gtb.machine.ion_implanter.lv.name=Basic Ion Implanter Unit
+gtb.machine.ion_implanter.mv.name=Advanced Ion Implanter Unit
+gtb.machine.ion_implanter.hv.name=Advanced Ion Implanter Unit II
+gtb.machine.ion_implanter.ev.name=Advanced Ion Implanter Unit III
+gtb.machine.ion_implanter.iv.name=Elite Ion Implanter Unit
+gtb.machine.ion_implanter.luv.name=Elite Ion Implanter Unit II
+gtb.machine.ion_implanter.zpm.name=Elite Ion Implanter Unit III
+gtb.machine.ion_implanter.uv.name=Ultimate Ion Implanter Unit
+
+
 
 # Multiblock machine controllers
+
 gtb.machine.water_tank.name=Water Tank
 gtb.machine.vacuum_furnace.name=Vacuum Furnace
 gtb.machine.vacuum_distillation_tower.name=Vacuum Distillation Tower
@@ -42,8 +99,11 @@ gtb.machine.bedrock_pump.name=Bedrock Pump
 gtb.machine.bacterial_vat.name=Bacterial Vat
 gtb.machine.astro_mining_station.name=Astro Mining Station
 gtb.machine.fischer_tropsch_reactor.name=Fischer Tropsch Reactor
+gtb.machine.engraving_unit.name=Engraving Unit
 
 # MetaItems
+
+metaitem.engraved_hasoc_wafer.name=Engraved HaSoC Wafer
 metaitem.astro_miner.name=Astro Miner
 metaitem.moon.name=Moon
 metaitem.paraffin_wax.name=Paraffin Wax
@@ -205,6 +265,7 @@ metaitem.bituminous_residues.name=Bituminous Residues
 
 
 #Materials
+gregtech.material.phosphorus_solution=Phosphorus Solution
 gregtech.material.tungstentrioxide=Tungsten Trioxide
 gregtech.material.calciumhydroxide=Calcium Hydroxide
 gregtech.material.lithiumhydroxide=Lithium Hydroxide
