--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -399,3 +399,73 @@ gregtech.material.doped_nanotube_deposition_mix=Doped Nanotube Deposition Mix
 gregtech.material.nanotube_deposition_mix=Nanotube Deposition Mix
 gregtech.material.doped_nanotube_deposition_mixture=Doped Nanotube Deposition Mixture
 gregtech.material.carbon_nanotubes=Carbon Nanotubes
+gregtech.material.sodium_hydride=Sodium Hydride
+gregtech.material.sodium_borohydride=Sodium Borohydride
+gregtech.material.sodium_ethoxide=Sodium Ethoxide
+gregtech.material.potassium_manganate=Potassium Manganate
+gregtech.material.aluminium_chloride=Aluminium Chloride
+gregtech.material.cucrmgba_catalyst=CuCrMgBa Catalyst
+gregtech.material.photopolymer=Photopolymer
+gregtech.material.bio_plastic=Bio Plastic
+gregtech.material.ethylenediamine=Ethylenediamine
+gregtech.material.cupriavidus_necator=Cupriavidus Necator
+gregtech.material.cupriavidus_necator_bacteria_sample=Cupriavidus Necator Bacteria Sample
+gregtech.material.glutamine=Glutamine
+gregtech.material.beta_pinene=Beta Pinene
+gregtech.material.leucine=Leucine
+gregtech.material.defatted_soybean_flour=Defatted Soybean Flour
+gregtech.material.papair_digest_of_soybean_meal=Papaic Digest of Soybean Meal
+gregtech.material.rhizobium=Rhizobium
+gregtech.material.solid_milk_residues=Solid Milk Residues
+gregtech.material.solidified_sterile_defibernated_sheep_blood=Solidified Sterile Defibernated Sheep Blood
+gregtech.material.fructose=Fructose
+gregtech.material.iriditus=Iriditus
+gregtech.material.eschericia_coli=Eschericia Coli
+gregtech.material.glucose=Glucose
+gregtech.material.solid_grain=Solid Grain
+gregtech.material.grist_powder=Grist Powder
+gregtech.material.yeast_extract_mannitol_medium=Yeast Extract Mannitol Medium
+gregtech.material.brevibacterium_flavium=Brevibacterium Flavium
+gregtech.material.yeast=Yeast
+gregtech.material.blood=Bloood
+gregtech.material.bacterial_growth_medium=Bacterial Growth Medium
+gregtech.material.depleted_bacterial_growth_medium=Depleted Bacterial Growth Medium
+gregtech.material.polyetheretherketone=Polyetheretherketone
+gregtech.material.ethylene_oxide=Ethylene Oxide
+gregtech.material.crushed_soybean=Crushed Soybean
+gregtech.material.hundred_methanol=100% Methanol
+gregtech.material.hundred_butanol=100% Butanol
+gregtech.material.hundred_ethanol=100% Ethanol
+gregtech.material.activated_carbon=Activated Carbon
+gregtech.material.hot_water=Hot Water
+gregtech.material.ethylene_glycol=Ethylene Glycol
+gregtech.material.sodium_hydroxide_solution=Sodium Hydroxide Solution
+gregtech.material.boric_acid=Boric Acid
+gregtech.material.potassium_hydroxide=Potassuim Hydroxide
+gregtech.material.sulfanilamide=Sulfanilamide
+gregtech.material.turpentine=Turpentine
+gregtech.material.wort=Wort
+gregtech.material.phenyl_ethyl_alcohol=Phenyl Ethyl Alcohol
+gregtech.material.polyhydroxylalkanoate=Polyhydroxylalkanoate
+gregtech.material.y_butyralacetone=Y-Butyralacetone
+gregtech.material.xerizin=Xerizin
+gregtech.material.hot_grist_solution=Hot Grist Solution
+gregtech.material.propargyl_alcohol=Propargyl Alcohol
+gregtech.material.acetylsulfanilyl_chloride=Acetylsulfanilyl Chloride
+gregtech.material.one_four_butanediol=1,4-Butanediol
+gregtech.material.palm_oil=Palm Oil
+gregtech.material.heated_milk_slurry=Heated Milk Slurry
+gregtech.material.nonoxynol_9=Nonoxynol-9
+gregtech.material.acetylene=Acetylene
+gregtech.material.chlorosulfonic_acid=Chlorosulfonic Acid
+gregtech.material.one_four_butynediol=1,4-Butynediol
+gregtech.material.photopolymer=Photopolymer
+gregtech.material.clean_ammonia_solution=Clean Ammonia Solution
+gregtech.material.nonoxynol_9_solution=Nonoxynol-9 Solution
+gregtech.material.peptone_mixture=Peptone Mixture
+gregtech.material.beta_pinene_solution=Beta Pinene Solution
+gregtech.material.ethoxylated_nonylphenol=Ethoxylated Nonylphenol
+gregtech.material.yeem_solution=YEEM Solutiongregtech.material.bio_plastic=
+gregtech.material.aniline=Bio Plastic
+gregtech.material.alpha_linolenic_acid=Alpha Linolenic Acid
+gregtech.material.ammonium_nitrate=Ammonium Nitrate
